--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,21 +3,28 @@ name = "sensor-payload"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
 embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"] }
 embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
 embassy-time = { version = "0.3.0", features = ["defmt"] }
+embassy-usb-logger = "0.1.0"
 
+# Error and print handling
 defmt = "0.3.5"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
-
-cortex-m = { version = "0.7.6", features = ["inline-asm"] }
-cortex-m-rt = "0.7.0"
-embassy-usb-logger = "0.1.0"
 log = "0.4.20"
 
-# BNO055 Stuff
-bno055 = "0.3.4"
+# ARM Cortex M0 support
+cortex-m = { version = "0.7.6", features = ["inline-asm"] }
+cortex-m-rt = "0.7.0"
+
+# LoRa and sensors
 sx127x_lora = "0.3.1"
+
+# These settings make it as small as possible
+[profile.release]
+lto = true
+strip = true
+opt-level = "z"
+codegen-units = 1
