Simple transmission setup.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ cortex-m-rt = "0.7.0"
 
 # LoRa and sensors
 sx127x_lora = "0.3.1"
+embassy-sync = "0.5.0"
 
 # These settings make it as small as possible
 [profile.release]
