--- a/sending/Cargo.toml
+++ b/sending/Cargo.toml
@@ -10,7 +10,10 @@ embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-dri
 embassy-time = { version = "0.3.0", features = ["defmt"] }
 embassy-usb-logger = "0.1.0"
 
-# Error and print handling
+# Data and packet handling
+shared-types = { path = "../shared_types/" }
+
+# Error, data, and print handling
 defmt = "0.3.5"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
