--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -7,5 +7,5 @@ authors.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
 nmea0183 = "0.4.0"
+packed_struct = { version = "0.10.1", default-features = false }
