--- a/sending/Cargo.toml
+++ b/sending/Cargo.toml
@@ -9,6 +9,7 @@ embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers"
 embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
 embassy-time = { version = "0.3.0", features = ["defmt"] }
 embassy-usb-logger = "0.1.0"
+embassy-sync = "0.5.0"
 
 # Data and packet handling
 shared-types = { path = "../shared_types/" }
@@ -25,5 +26,6 @@ cortex-m-rt = "0.7.0"
 
 # LoRa and sensors
 sx127x_lora = "0.3.1"
-embassy-sync = "0.5.0"
 mma8x5x = "0.1.1"
+nmea0183 = "0.4.0"
+#embedded-devices = { path = "../../embedded-devices/" }
