--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -7,5 +7,6 @@ authors.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+defmt = "0.3.6"
 nmea0183 = "0.4.0"
 packed_struct = { version = "0.10.1", default-features = false }
