--- a/sending/Cargo.toml
+++ b/sending/Cargo.toml
@@ -10,6 +10,8 @@ embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-dri
 embassy-time = { version = "0.3.0", features = ["defmt"] }
 embassy-usb-logger = "0.1.0"
 embassy-sync = "0.5.0"
+embassy-embedded-hal = "0.1.0"
+shared-bus = "0.3.1"
 
 # Data and packet handling
 shared-types = { path = "../shared_types/" }
@@ -28,5 +30,4 @@ cortex-m-rt = "0.7.0"
 sx127x_lora = "0.3.1"
 mma8x5x = "0.1.1"
 nmea0183 = "0.4"
-bmp388 = "0.1.0"
-shared-bus = { version = "0.3.1", features = ["cortex-m"] }
+bmp388 = { path = "/home/g2/Documents/projects/Rocketry/bmp388/", features=["asynch"] }
