Added USB communication instead of serial to receiver

--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -9,3 +9,4 @@ authors.workspace = true
 [dependencies]
 nmea0183 = "0.4.0"
 packed_struct = { version = "0.10.1", default-features = false }
+bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
