--- a/receiving/Cargo.toml
+++ b/receiving/Cargo.toml
@@ -9,6 +9,8 @@ embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers"
 embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
 embassy-time = { version = "0.3.0", features = ["defmt"] }
 embassy-usb-logger = "0.1.0"
+embassy-usb = "0.1.0"
+embassy-sync = "0.5.0"
 
 # Data and packet handling
 shared-types = { path = "../shared_types/" }
